--- a/ban7/common.css
+++ b/ban7/common.css
@@ -43,13 +43,17 @@ cursor:pointer; }
     color:#000; font-weight:700; line-height:36px; }  
 #gnb li a.dep1:after { content:""; display:block; width:180px; height:4px; 
     background:#fff; }    
-.sub { visibility:hidden; opacity:0; position:absolute; top:96px; left:0; padding-left:calc(50vw - 600px); padding-right:calc(50vw - 600px); z-index:900; width:1200px; background:#f1f1f1; height:320px; border-top:4px solid #ddd; transition:0.6s; }
+.sub { visibility:hidden; opacity:0; position:absolute; top:96px; left:0; 
+    padding-left:50px;
+     padding-right:calc(50vw - 600px); z-index:900; width:1200px;
+      background:#f1f1f1; height:320px;margin-top: 73px;margin-left: 350px;
+      border-top:4px solid #ddd; transition:0.6s; }
 #gnb li:hover .sub { visibility:visible; opacity:1; } 
 #gnb li:hover a.dep1 { color:#1c7df9; }    
 #gnb li:hover a.dep1:after { background:#1c7df9; }     
 .sub li {float:left; }    
-.thumbnail { width:300px; height: 200px; background-position:left center;
-    background-repeat: no-repeat; }
+.thumbnail { width:200px; height: 300px; background-position:left center;
+    background-repeat: no-repeat;}
 .item1 .thumbnail { background-image:url("./img/ico-gnb-m1.png"); }    
 .item2 .thumbnail { background-image:url("./img/ico-gnb-m2.png"); } 
 .item3 .thumbnail { background-image:url("./img/ico-gnb-m3.png"); } 
