--- a/b2/main.css
+++ b/b2/main.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 *{margin: 0;padding: 0;}
 img{border: 0;}
 body,html{width: 100%;height:100%;overflow-x: hidden auto; position: relative;
@@ -105,7 +107,7 @@ line-height:76px; cursor: pointer; color:#0066ad; border:2px solid #ffffff; bord
 /*검색창*/
 
 
-#frm1 { border: 2px solid #4271e5;width: 1100px; height: 80px; margin:0 auto;margin-top: 100px; }  
+#frm1 { border: 2px solid #4271e5;width: 1100px; height: 80px; margin:0 auto;margin-top: 450px; }  
 #keyword {display:block; height: 70px; width:910px; font-size:18px; text-indent:24px; 
 margin: 5px;float:left ; opacity:0.6; transition:0.5s;  } 
 #search { display:block; width: 70px; height: 70px; float:right; margin: 5px; 
@@ -115,10 +117,12 @@ margin: 5px;float:left ; opacity:0.6; transition:0.5s;  }
 #keyword:focus { opacity:1; width: 800px; }   
 #keyword:focus ~ #search { opacity:1; }    
 
+content {margin-top: 20px;}
 
-.menu_icon{position: relative;left: 400px;}
-.menu_icon img {float: left;widows: 170px;height: 170px;padding: 10px;border-radius: 300px;float:}
-.menu_icon img:hover{box-shadow:10px 5px 10px #4271e5;transition: 0.7s;}
+.menu_icon{position: relative;left: 300px;position: absolute;}
+.menu_icon li{width: 170px;height: 170px;float: left;padding-left: 50px;}
+.menu_icon img {float: left;widows: 170px;height: 170px;padding:1px; border-radius: 300px;}
+.menu_icon img:hover{box-shadow: 2px 3px 10px #4271e5;transition: 0.6s;}
 .pub_wrap img:hover {transform: scale(1.1, 1.1);box-shadow: 2px 2px 20px; transition:0.7s;}
   
 /*라디오탭*/
@@ -178,15 +182,15 @@ from{transform:rotateY(0deg) ;}
 to {transform: rotateY(360deg);} */
 
 /*기관소개 아이콘3개*/
-.pub_wrap{position: relative;margin-left: 455px;}
-.pub li{float: left;margin-left:  5px;padding-left: 30px;}
+.pub_wrap{position: relative;margin-left: 320px;}
+.pub li{float: left;margin-left:  80px;margin-top: 30px;}
 .pub li img{height: 150px;border: 3px solid #4271e5}
 .pub li:hover .pub li img {width: 400px;height: 10px;;background-color: orange;}
 
 /*박스4개*/
 .css_tit { text-align:center; border-bottom:1px solid #333; }    
-.lst { clear:both; width:1280px; margin:10px auto; position:relative; }    
-.lst li { margin:10px; float:left; width: 300px; height: 300px;  }
+.lst { clear:both; width:auto; position:relative;top: 50px;margin-left: 80px;}    
+.lst li { float:left; width: 300px; height: 300px;margin-left: 100px;  }
 .lst.sq li { overflow:hidden;}    
 .lst .bx_fr { width:600px; height:300px; transition:0.5s; }
 .lst li .tit_box { width:300px; height:300px; background:#282828; color:#fff; 
@@ -225,7 +229,7 @@ transition:0.5s; transition-delay:0.5s;font-size: 25px; }
 
 
 /*푸터 링크*/   
-.footer_site {position: relative;width: 1920px;height: 80px;margin-top: 330px; background-color:#e3e3e3;}
+.footer_site {position: relative;width: 1920px;height: 80px;margin-top: 330px; background-color:#e3e3e3;top: 70px;}
 .footer_site ul {width: 1920px;height: 150px;margin-left: 320px;}
 .footer_site li {float: left;padding-left: 10px;}
 .footer_site img {width: 250px;height: 70px;line-height: 70px;padding-top: 5px;}
@@ -234,9 +238,9 @@ transition:0.5s; transition-delay:0.5s;font-size: 25px; }
 
 
 /* footer */
-.ft {width: 1920px;height: 70px;position: relative;top: 10px;text-align:center; top:x;}
-.ft_link { width:1100px; margin:6px auto; height:50px; padding-left:400px;}
-.ft_link li { float:left; padding:0px 8px; }
+.ft {width: 1920px;height: 70px;position: relative;text-align:center;margin-top: 90px;}
+.ft_link { width:1100px; height:50px; padding-left:400px;line-height: 50px;}
+
 
 .ft_link li a { font-size:16px; color:#333333; font-weight:bold;}
 .ft_link li a:after { content:"|"; padding-left:16px; }
