--- a/b2/main.css
+++ b/b2/main.css
@@ -229,9 +229,9 @@ transition:0.5s; transition-delay:0.5s;font-size: 25px; }
 
 
 /*푸터 링크*/   
-.footer_site {position: relative;width: 1920px;height: 80px;margin-top: 330px; background-color:#e3e3e3;top: 70px;}
-.footer_site ul {width: 1920px;height: 150px;margin-left: 320px;}
-.footer_site li {float: left;padding-left: 10px;}
+.footer_site {position: relative;width: 1960px;height: 80px;margin-top: 330px; background-color:#e3e3e3;top: 70px;}
+.footer_site ul {width: 1600px;height: 150px;margin-left:130px;}
+.footer_site li {float: left;margin-left: 70px;}
 .footer_site img {width: 250px;height: 70px;line-height: 70px;padding-top: 5px;}
 
 
